add redis support for logging user-specific accepted shares

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "https://cryptonoter.com",
   "main": "server.js",
   "dependencies": {
+    "redis": "^2.8.0",
     "ws": "^3.2.0"
   },
   "devDependencies": {},
