--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "https://cryptonoter.com",
   "main": "server.js",
   "dependencies": {
+    "dateformat": "^3.0.3",
     "redis": "^2.8.0",
     "ws": "^3.2.0"
   },
